--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "axios": "^1.7.7",
     "element-plus": "^2.8.6",
     "three": "^0.169.0",
     "vanta": "^0.5.24",
