--- a/package.json
+++ b/package.json
@@ -7,11 +7,21 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@js-preview/docx": "^1.6.2",
+    "@js-preview/pdf": "^2.0.8",
+    "@vue-office/docx": "^1.6.2",
+    "@vue-office/pdf": "^2.0.8",
     "axios": "^1.7.7",
+    "docx-preview": "^0.3.3",
     "element-plus": "^2.8.6",
+    "mammoth": "^1.8.0",
+    "pdf.js": "^0.1.0",
+    "pdfjs": "^2.5.3",
+    "pdfjs-dist": "^2.10.377",
     "three": "^0.169.0",
     "vanta": "^0.5.24",
     "vue": "^3.2.13",
+    "vue-demi": "^0.14.10",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
   },
@@ -21,7 +31,8 @@
     "@vue/cli-service": "~5.0.0",
     "mockjs": "^1.1.0",
     "sass": "^1.32.7",
-    "sass-loader": "^12.0.0"
+    "sass-loader": "^12.0.0",
+    "worker-loader": "^3.0.8"
   },
   "browserslist": [
     "> 1%",
